<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ImageActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:contentDescription="@string/captured_image"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:srcCompat="?android:attr/scrollbarTrackVertical" />

        <ImageButton
            android:id="@+id/bBackMain"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_to_home"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/bSaveImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bSaveImage"
            app:layout_constraintVertical_bias="0.428"
            app:srcCompat="?attr/homeAsUpIndicator"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <SeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="282dp"
            android:layout_height="16dp"
            android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="282dp"
            android:layout_height="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBarContrast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bSaveImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:contentDescription="@string/save_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/stat_sys_download_done" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bResetFilter"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="#606060"
                    android:contentDescription="@string/captured_image"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />

                <ImageView
                    android:id="@+id/bSepiaFilter"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="#606060"
                    android:contentDescription="@string/captured_image"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />

                <ImageView
                    android:id="@+id/bGrayFilter"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="#606060"
                    android:contentDescription="@string/captured_image"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />

                <ImageView
                    android:id="@+id/bNegativeFilter"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="#606060"
                    android:contentDescription="@string/captured_image"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />

                <ImageView
                    android:id="@+id/bSobelFilter"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="#606060"
                    android:contentDescription="@string/captured_image"
                    app:srcCompat="@android:drawable/ic_menu_report_image"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>